--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -19,8 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\DTOs\Candidate\" />
-    <Folder Include="Core\DTOs\Job\" />
+    <Folder Include="documents\pdfs\" />
   </ItemGroup>
 
 </Project>
