--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,12 +17,14 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
     "@mui/x-data-grid": "^6.18.5",
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "sass": "^1.69.5",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
